# snRNAseq_analysis

./: .gitignore  README.md  pyproject.toml  testing.Rmd
data/raw/: PRJNA1010853-fastq.sh
src/: cellbending.sh  cellcounting.sh  download_data.sh  test_analysis.Rmd
src/Python/: R.py  analysis.py  ccc.py  pipeline.ipynb  plot.py  preprocess.py  preprocessing.ipynb
src/R/: Source Code 1.R  Source Code 2.R  Source Code 3.R  Source Code 4.R  Source Code 5.R  Source Code 6.R  analysis.Rmd  integration.R  pipeline.Rmd  preprocess.R  preprocessing.R  preprocessing.Rmd
src/analysis/sc/: 1-preprocess.ipynb
src/analysis/so_et_al single cell/: 1-preprocess.ipynb  2.0-macro_subclusters.ipynb  2.1-fibro_subclusters.ipynb  2.2-panstromal.ipynb  3-cell2cell.ipynb  3-subclusters.ipynb
src/analysis/sp/: 1-spatial_preprocess.ipynb
src/py/: __init__.py  analysis.py  get_data.py  plot.py  preprocess.py  utils.py
src/python/: __init__.py  analysis.py  plot.py  preprocess.py  utils.py
src/scripts/: analyze-R.sh  cellbending.sh  cellcounting.sh  integrate-R.sh  preprocess-R.sh  test.sh
