[project]
name = "snrnaseq-analysis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ehung", email = "ethanhung11@gmail.com" }
]
dependencies = [
    "tables>=3.10.1",
    "cellbender @ git+https://github.com/broadinstitute/CellBender.git@4334e8966217c3591bf7c545f31ab979cdc6590d",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/snrnaseq_analysis"]
